Added Orders and Customers

--- a/StoreApp.Core/StoreApp.Core.csproj
+++ b/StoreApp.Core/StoreApp.Core.csproj
@@ -57,8 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Inventory.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
