--- a/StoreApp.Tests/App.config
+++ b/StoreApp.Tests/App.config
@@ -10,7 +10,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings></appSettings>
-  <connectionStrings></connectionStrings>
+  <connectionStrings>
+    <add name="StoreApp" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=StoreApp;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
