--- a/StoreApp/Web.config
+++ b/StoreApp/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="Inventory" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=StoreApp;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="StoreApp" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=StoreApp;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
